<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_slam</name>
  <version>0.0.0</version>
  <description>Mapping and Localization Components for Turtlebots</description>

  <maintainer email="s2daga@uwaterloo.ca">Somesh Daga</maintainer>
  <license>MIT</license>
  <author email="s2daga@uwaterloo.ca">Somesh Daga</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>turtlebot_description</exec_depend>

  <export>
  </export>
</package>
